fix: hrml and modal padding

--- a/public/index.html
+++ b/public/index.html
@@ -12,26 +12,7 @@
     <meta name="description" content="Modern PWA Weather React Application" />
     <link rel="apple-touch-icon" href="./images/logo.png" />
     <link rel="manifest" href="./manifest.json" />
-    <title>실전..</title>
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        overflow: initial !important;
-      }
-      body {
-        font-size: 15px;
-        line-height: 1.46668;
-        font-weight: 400;
-        font-variant-ligatures: common-ligatures;
-        -moz-osx-font-smoothing: grayscale;
-        -webkit-font-smoothing: antialiased;
-      }
-    </style>
+    <title>갓생메이커</title>
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
