fix: manifest error & offline page

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     다른 사람들에게 위로와 공감을 받아보세요!"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="apple-touch-icon" href="./thandbag_images/152.png" />
+    <link rel="apple-touch-icon" href="./imgs/152.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>갓생 메이커</title>
