--- a/public/offline.html
+++ b/public/offline.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>갓생메이커</title>
-  </head>
+<html>
+  <head> </head>
   <body>
     <div>
-      <h2>
-        <span>Please go online to check the current weather.</span>
-      </h2>
+      <p>네트워크 연결상태가 좋지않습니다.</p>
     </div>
   </body>
 </html>
