fix: index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="쌩드백을 치면서 고민, 걱정, 힘든 생각과 감정들을 해소하고, 
-    다른 사람들에게 위로와 공감을 받아보세요!"
-    />
+    <meta name="description" content="" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="apple-touch-icon" href="./imgs/152.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
