--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="./imgs/144.png" />
-    <link rel="icon" href="./imgs/114.png" />
+    <link rel="apple-touch-icon" href="./favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <title>갓생메이커</title>
   </head>
   <body>
