--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="" />
+    <meta name="description" content="Making Your Life as GOD LIFE" />
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="./favicon.ico" />
     <link rel="icon" href="./favicon.ico" />
