--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="google-site-verification" content="xlnAaTFt_O_7RUKn2oJ0Dm5oMdGuoGZ7oAeuRjazmjQ" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Making Your Life as GOD LIFE" />
-        <link rel="manifest" href="manifest.json" />
-        <link rel="apple-touch-icon" href="./favicon.ico" />
-        <link rel="icon" href="./favicon.ico" />
-        <title>갓생메이커</title>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="google-site-verification"
+      content="i4W44fWu-sDjHGV5c0FMm-IuxcqXXQSpsTTxBY-s5t4"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Making Your Life as GOD LIFE" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" href="./favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
+    <title>갓생메이커</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
