feat: Search Debounce

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
     <link rel="apple-touch-icon" href="./favicon.ico" />
     <link rel="icon" href="./favicon.ico" />
     <title>갓생메이커</title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <meta
+      name="google-site-verification"
+      content="i4W44fWu-sDjHGV5c0FMm-IuxcqXXQSpsTTxBY-s5t4"
+    />
   </head>
   <body>
     <div id="root"></div>
