feat: html uptate

--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="google-site-verification"
-      content="i4W44fWu-sDjHGV5c0FMm-IuxcqXXQSpsTTxBY-s5t4"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Making Your Life as GOD LIFE" />
-    <meta property="og:title" content="갓생메이커" />
-    <meta property="og:image" content="./imgs//godlifeog.webp" />
-    <meta property="og:url" content="http://www.godlife.co.kr" />
-    <!-- 표시하고싶은 url주소 -->
-    <meta
-      property="og:description"
-      content="MZ세대의 '갓생 살기' 갓생메이커에서 시작하세요!"
-    />
-    <!-- 카드에 표시하고 싶은 설명 -->
-    <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="./favicon.ico" />
-    <link rel="icon" href="./favicon.ico" />
-    <title>갓생메이커</title>
-    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <meta
-      name="google-site-verification"
-      content="i4W44fWu-sDjHGV5c0FMm-IuxcqXXQSpsTTxBY-s5t4"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="google-site-verification" content="i4W44fWu-sDjHGV5c0FMm-IuxcqXXQSpsTTxBY-s5t4" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta name="description" content="Making Your Life as GOD LIFE" />
+        <meta property="og:title" content="갓생메이커" />
+        <meta property="og:image" href="./imgs//godlifeog.webp" />
+        <meta property="og:url" content="http://www.godlife.co.kr" />
+        <!-- 표시하고싶은 url주소 -->
+        <meta property="og:description" content="MZ세대의 '갓생 살기' 갓생메이커에서 시작하세요!" />
+        <!-- 카드에 표시하고 싶은 설명 -->
+        <link rel="manifest" href="manifest.json" />
+        <link rel="apple-touch-icon" href="./favicon.ico" />
+        <link rel="icon" href="./favicon.ico" />
+        <title>갓생메이커</title>
+        <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+        <meta name="google-site-verification" content="i4W44fWu-sDjHGV5c0FMm-IuxcqXXQSpsTTxBY-s5t4" />
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
