feat: google login setting

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="google-site-verification" content="i4W44fWu-sDjHGV5c0FMm-IuxcqXXQSpsTTxBY-s5t4" />
+        <meta name="google-site-verification" content="LlY5NOjL9jLZf64EsA4rAofSd-w1xYao0GOCrvq4MrE" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Making Your Life as GOD LIFE" />
         <meta property="og:title" content="갓생메이커" />
-        <meta property="og:image" href="./imgs//godlifeog.webp" />
+        <meta property="og:image" content="./imgs//godlifeog.webp" />
         <meta property="og:url" content="http://www.godlife.co.kr" />
         <!-- 표시하고싶은 url주소 -->
         <meta property="og:description" content="MZ세대의 '갓생 살기' 갓생메이커에서 시작하세요!" />
