feat: og update

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Making Your Life as GOD LIFE" />
         <meta property="og:title" content="갓생메이커" />
-        <meta property="og:image" content="./imgs//godlifeog.webp" />
+        <meta property="og:image" content="./imgs/godlifeog.webp" />
         <meta property="og:url" content="http://www.godlife.co.kr" />
         <!-- 표시하고싶은 url주소 -->
         <meta property="og:description" content="MZ세대의 '갓생 살기' 갓생메이커에서 시작하세요!" />
